# gossip

./: CMakeLists.txt  README.rst  dispatcher.cpp  dispatcher_test.cpp
include/gossip/: dispatcher.hpp
